Fixed alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,11 +53,11 @@ h1 {
 
 .interns {
     display: none;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     margin-bottom: 10px;
-    max-width: 300px;
+    max-width: 900px;
     min-width: 265px;
+    width: 90%;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 10px;
@@ -95,6 +95,7 @@ ul {
     transition: background-color 0.3s;
     background-color: #f6f6f6;
     width: 300px;
+    margin: auto;
 }
 
 #fullLink {
